UI: fix alignment of card descriptions

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -19,7 +19,7 @@ header > p { font-size: 1rem; }
   justify-content: center;
 }
 
-#floating-button > a {
+#floating-button > a:link {
   transform: translateZ(0) translateY(-50%);
   padding: 0.5rem 0;
   border: 0.25rem solid currentcolor;
@@ -37,4 +37,9 @@ header > p { font-size: 1rem; }
 #floating-button > a:hover {
   transform: translateZ(0) translateY(-50%) scale(1.05);
   box-shadow: var(--depth-2);
+}
+
+#floating-button > a:active {
+  transform: translateZ(0) translateY(-50%);
+  box-shadow: var(--depth-1);
 }
